--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "name": "creAI",
   "version": "1.0.0",
-  "description": "",
+  "description": "Deep learning based tilemap generator for Minecraft",
   "main": "main.js",
   "scripts": {
     "start": "electron .",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
-  "author": "",
+  "author": "Eszes Bálint",
   "license": "ISC",
   "devDependencies": {
     "electron": "1.7.6"
